collect all answers into one object

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                                             <div class="field">
                                                 <label class="label">Введите имя</label>
                                                 <div class="control has-icons-left has-icons-right is-large">
-                                                    <input type="text" required autocomplete="on" placeholder="Имя" id="name" dir="ltr" class="input is-large input__name">
+                                                    <input type="text" required autocomplete="on" placeholder="Имя" id="userName" dir="ltr" class="input is-large input__name">
                                                     
                                                     <span class="icon is-left is-medium"><svg viewBox="0 0 24 24" class="mdi-icon mdi-36px"><title>mdi-account</title><path d="M12,4C14.21,4 16,5.79 16,8C16,10.21 14.21,12 12,12C9.79,12 8,10.21 8,8C8,5.79 9.79,4 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z" stroke-width="0" fill-rule="nonzero"></path></svg></span>
                                                     <span class="icon is-right has-text-danger is-medium"><svg viewBox="0 0 24 24" class="mdi-icon mdi-36px"><title>mdi-alert-circle</title><path d="M13,13H11V7H13M13,17H11V15H13M12,2C6.48,2 2,6.48 2,12C2,17.52 6.48,22 12,22C17.52,22 22,17.52 22,12C22,6.48 17.52,2 12,2Z" stroke-width="0" fill-rule="nonzero"></path></svg></span>
